io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/illegalstaticfieldupdate/C.java
package io.hotmoka.examples.errors.illegalstaticfieldupdate;

public class C {

	public static int i;

	public C() {
		i++;
	}
}
